--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,5 @@ services:
     environment:
       KAFKA_ADVERTISED_HOST_NAME: localhost
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-
+#      KAFKA_LOG_RETENTION_MS: 10000
+#      KAFKA_LOG_RETENTION_CHECK_INTERVAL_MS: 5000
