--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
 		<module>data-pipeline-processor</module>
 		<module>application-rest-api</module>
         <module>data-pipeline-entities</module>
-    </modules>
+		<module>data-pipeline-persistence</module>
+	</modules>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -72,6 +73,15 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
 		</dependency>
     </dependencies>
 
