--- a/data-pipeline-processor/pom.xml
+++ b/data-pipeline-processor/pom.xml
@@ -23,6 +23,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.andy.persistence</groupId>
+            <artifactId>data-pipeline-persistence</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
